# silliconDB

./: .gitignore  CMakeLists.txt  CMakeLists_solaris.txt  parser.cpp
parser/: CMakeLists.txt
parser/headers/: parser.h
parser/src/: main.cpp  parser.cpp
src/: CMakeLists.txt
src/api/: AggApi.cpp  AggApi.h  CMakeLists.txt  JoinApi.cpp  JoinApi.h  ParserApi.h  ScanApi.cpp  ScanApi.h  ssb.h
src/bench/: CMakeLists.txt  NumaExp.cpp
src/bench/data/: datagen.sh
src/bench/graphs/gnuplot_scripts/: fg_util  joins_q1.eps  joins_q4.eps  joins_q8.eps  plot.sh  scans_q1.eps  scans_q4.eps  scans_q8.eps  utilization
src/bench/graphs/gnuplot_scripts/plots/: dax_join.eps  dax_join_q1.eps  dax_join_q4.eps  dax_join_q8.eps  dax_scan_q1.eps  dax_scan_q4.eps  scan_q1.eps  util.eps
src/bench/vldb2018/: CMakeLists.txt
src/bench/vldb2018/qt/: CMakeLists.txt  SDBAndApi.cpp  SDBAndApi.h  SDBApi.cpp  SDBApi.h  SDBJoinApi.cpp  SDBJoinApi.h
src/bench/vldb2018/tpch/: CMakeLists.txt  Query3.cpp  Query3.h
src/data/: CMakeLists.txt  DataCompressor.cpp  DataCompressor.h  DataLoader.h  MicroDataLoader.h  Partitioner.cpp  Partitioner.h
src/data/index/: BloomFilter.h
src/data/microbench/: CMakeLists.txt  Column.h  MicroBench.cpp  Partition.h  Table.h
src/debug/: cpu.d  cpuwalk.d  dax.d
src/exec/: '  31  CMakeLists.txt  Client.cpp  Master.cpp  Master_Q3.cpp
src/exec/Q1/: 2Q_Master.cpp  CMakeLists.txt  DaxQueue.cpp  Master.cpp
src/exec/Q3/: CMakeLists.txt  Master.cpp
src/exec/util/: DaxWrapper.h  WorkQueue.h  WorkQueueLocked.h
src/log/: Result.h
src/network/: CMakeLists.txt  Main.cpp
src/network/server/: CMakeLists.txt  TCPAcceptor.cpp  TCPAcceptor.h
src/network/util/: CMakeLists.txt  TCPConnector.cpp  TCPConnector.h  TCPStream.cpp  TCPStream.h
src/sched/: CMakeLists.txt  ProcessingUnit.cpp  ProcessingUnit.h
src/thread/: CMakeLists.txt  CoreHandler.h  CoreQtBenchHandler.h  CoreQtBenchHandler__.h  DaxHandler.h  DaxQtBenchHandler.h  DaxSharedQHandler.h  Syncronizer.h  Thread.cpp  Thread.h  ThreadHandler.h
src/util/: CMakeLists.txt  Helper.h  Partitioner.cpp  Partitioner.h  Query.h  Query1.cpp  Query1.h  Query3.cpp  Query3.h  Types.h  WorkItem.cpp  WorkItem.h
